# schedule

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/migrations/: 0001_init.sql  0002_extend_schedule_window.sql  0002_templates_rework.sql  0003_settings_clock_format.sql
backend/src/: auth.rs  db.rs  error.rs  fractional.rs  history.rs  lib.rs  main.rs  push.rs  resolve.rs  rev.rs  sync.rs
backend/src/models/: calendar.rs  history.rs  mod.rs  project.rs  schedule.rs  settings.rs  task.rs
backend/src/routes/: auth.rs  calendar.rs  day.rs  history.rs  mod.rs  projects.rs  push.rs  schedules.rs  sync.rs  tasks.rs
backend/src/types/: common.rs  mod.rs  ops.rs  project.rs  schedule.rs  settings.rs
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/public/: style.css
frontend/src/: api.js  history.js  main.js  main.tsx  palette.js  shell.js  style.css  sw.ts
frontend/src/components/: autosave.js  color_picker.js  cursor_insert.js  day_flags.js  dep_edge.js  (+10 more)
frontend/test/: classify_layout.test.mjs  day_flags.test.mjs  dep_edge.test.mjs  fuzzy.test.mjs  insert_solver.test.mjs  layout.test.mjs  placeholder.test.mjs  reorder.test.mjs  task_order.test.mjs  time_cursor.test.mjs  time_parse.test.mjs
tests/layout/: 01_simple_dynamic.json  02_weighted_dynamic.json  03_fixed_anchors.json  04_dynamic_share_within_segment.json  05_below_min_duration.json
(+124 files in other folders)
