[package]
name = "schedule"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "AGPL-3.0-or-later"

[[bin]]
name = "schedule"
path = "src/main.rs"

[[bin]]
name = "adduser"
path = "src/bin/adduser.rs"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["cookie-signed"] }
tokio = { version = "1.52", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "macros", "migrate", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cookie = "0.18"
argon2 = "0.5"
rpassword = "7"
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing", "local-offset"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
rand = "0.8"
hex = "0.4"
